# zkcreds-benchmark

./: Cargo.toml  README.md  proof_sizes.csv
bench/: bench.rs  util.rs
src/: attrs.rs  com_nonce.rs  com_tree.rs  forest_gadget.rs  lib.rs  poseidon_utils.rs  pred.rs  proving_system.rs  simple_expiry.rs  tree_circuit.rs  universal_merkletree_extension.rs
